<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="@string/key_video_encoding"
        android:title="@string/title_video_encoding"
        android:entries="@array/pref_video_encoding_entries"
        android:entryValues="@array/pref_video_encoding_entries"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <ListPreference
        android:key="@string/key_video_resolution"
        android:title="@string/title_video_resolution"
        android:entries="@array/pref_video_resolution_entries"
        android:entryValues="@array/pref_video_resolution_entries"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <ListPreference
        android:key="@string/key_video_frame_rate"
        android:title="@string/title_video_frame_rate"
        android:entries="@array/entry_video_frame_rate"
        android:entryValues="@array/value_video_frame_rate"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <ListPreference
        android:key="@string/key_video_bitrate"
        android:title="@string/title_video_bitrate"
        android:entries="@array/entry_video_bitrate"
        android:entryValues="@array/value_video_bitrate"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

</PreferenceScreen>